@@ -56,6 +56,7 @@ class Config:
         # KODI-RD-IL
         self.LATEST_APK_VERSION_TEXT_FILE = uservar.LATEST_APK_VERSION_TEXT_FILE
         self.APK_DOWNLOADER_CODE = uservar.APK_DOWNLOADER_CODE
+        self.APK_DOWNLOAD_URL = uservar.APK_DOWNLOAD_URL
         ###################################
         self.YOUTUBETITLE = uservar.YOUTUBETITLE
         self.YOUTUBEFILE = uservar.YOUTUBEFILE
