@@ -1,3 +1,5 @@
+[COLOR yellow][B]v1.4.2[/B][/COLOR]
+* APK Update prompt - Open Downloader / Browser (Chrome/TV Bro) instead of wizard's APK menu.
 [COLOR yellow][B]v1.4.1[/B][/COLOR]
 * Add APK update check: 2 options - open Downloader manually, or download through Kodi to externalFX
 [COLOR yellow][B]v1.4.0[/B][/COLOR]
